@@ -1,4 +1,4 @@
-.TH VIFM 1 "November 09, 2016" "vifm 0.8.2"
+.TH VIFM 1 "November 18, 2016" "vifm 0.8.2"
 .\" ---------------------------------------------------------------------------
 .SH NAME
 .\" ---------------------------------------------------------------------------
@@ -2375,6 +2375,9 @@ vifm.
 .br
 This requires screen version 3.9.9 or newer for the screen \-X argument or tmux
 (1.8 version or newer is recommended).
+.TP
+.BI :screen!
+enable integration with terminal multiplexers.
 .TP
 .BI :screen?
 display whether integration with terminal multiplexers is enabled.
