@@ -63,6 +63,9 @@
 	Added [c and ]c shortcuts to navigate to previous/next mismatch in
 	directory comparison view.  Thanks to filterfalse.
 
+	Added :screen! form that enables terminal multiplexers support (instead of
+	toggling it as :screen does).  Thanks to Marcos Cruz.
+
 	Enable restoring files from trash from custom views.
 
 	View current directory on ".." for quickview/view mode.  Thanks to
